# centrist

./: CMakeLists.txt  README.md  __init__.py.temp  centrist_constants.h.in  setup.py.in
centrist_2d/: CMakeLists.txt  centrist.cxx  centrist.hpp  centristCxx.cxx  centristCxx.hpp
centrist_2d/python/: centristLibrary.py
